# arx-pistoris

./: .clang-format  .clang-tidy  .gitignore  ADDITIONAL_TERMS  AUTHORS  CMakeLists.txt  CMakePresets.json  README.md  justfile
.github/workflows/: release.yml
cli/: args.h  formats.cpp  formats.h  inspect.cpp  inspect.h  io.cpp  io.h  main.cpp  state.h  xform.cpp  xform.h
cli/animation/: ctx.h  dispatch.cpp  dispatch.h  io.cpp  io.h  modules.cpp  modules.h
cli/model/: ctx.h  dispatch.cpp  dispatch.h  io.cpp  io.h  modules.cpp  modules.h
cmake/: write_build_info.cmake
data/: Attribution.md
data/fixtures/animation/json/: Adventurer_Death.json  Adventurer_Idle.json  Adventurer_Interact.json  Adventurer_Run.json
data/fixtures/animation/native/: Adventurer_Death.tea  Adventurer_Idle.tea  Adventurer_Interact.tea  Adventurer_Run.tea
data/fixtures/model/native/: Adventurer.ftl  Axe.ftl  Backpack.ftl
docs/: API.md  AUTHORING_GUIDE.md  BUILD.md  CLI.md  LIMITATIONS.md  TESTING.md
fuzz/: ftl.dict  ftl_fuzz.cpp  ftl_json_fuzz.cpp  ftl_roundtrip_fuzz.cpp  glb_import_fuzz.cpp  obj.dict  obj_fuzz.cpp  obj_with_mtl_fuzz.cpp  tea.dict  tea_fuzz.cpp  tea_json_fuzz.cpp  tea_roundtrip_fuzz.cpp
fuzz/seeds/ftl-json/: minimal.json
fuzz/seeds/tea-json/: minimal.json
include/arx_pistoris/: arx_math.hpp  arx_pistoris.h  c_handle.hpp  common_data.hpp  ftl_data.hpp  pistoris.hpp  pistoris_types.h  tea_data.hpp
scripts/: check_rc_coverage.py  destructure_glb.py  install.ps1  install.sh
src/: layout_hash_gen.h.in  version.h.in
src/api/: api_helpers.cpp  api_helpers.h  c_api.cpp  cpp_api.cpp  strerror.cpp  strerror.h
src/arx/: ftl.cpp  ftl.h  tea.cpp  tea.h
src/utils/: cursor.h  log.h  mem_utils.h  parse_utils.h  text_cursor.cpp  text_cursor.h
src/utils/math/: mat3.cpp  mat3.h  mat4.cpp  mat4.h  quat.h  vec3.h  xform.cpp  xform.h
tests/: .clang-tidy  helpers.h
tests/api/: basic_tests.cpp  ftl_read_tests.cpp  ftl_write_tests.cpp  glb_export_tests.cpp  glb_import_tests.cpp  json_export_tests.cpp  obj_export_tests.cpp  obj_import_tests.cpp  tea_read_tests.cpp  tea_write_tests.cpp
tests/corpus/: ftl_corpus_tests.cpp  obj_corpus_tests.cpp  tea_corpus_tests.cpp
tests/cpp_api/: cpp_api_tests.cpp
tests/unit/: api_helpers_tests.cpp  cursor_tests.cpp  ftl_read_tests.cpp  ftl_write_tests.cpp  glb_export_tests.cpp  glb_import_tests.cpp  json_export_tests.cpp  math_mat3_tests.cpp  math_mat4_tests.cpp  math_quat_tests.cpp  math_vec3_tests.cpp  obj_export_tests.cpp  obj_import_tests.cpp  parse_utils_tests.cpp  tea_read_tests.cpp  tea_write_tests.cpp  xform_tests.cpp
